Navigation now Fixes and Ensquishens*
*really jankily
+ Nav’s position is fixed after certain scroll point
- is not fully responsive as it only works for Large Screens
- JS isn’t work too well interim, the tiny form animation is abrupt
-sigh…-

--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -63,15 +63,16 @@ LIGHTSLATEGRAY
 
 .nav li {
 	text-decoration: none;
+	background-color: #F5F5F5;
 	display: inline-block;
 	text-align: center;
 	color: #FDF5E6; 
 	padding: 1.5rem 0;
-	-webkit-transition: .5s;
-	-moz-transition: .5s;
-	-ms-transition: .5s;
-	-o-transition: .5s;
-	transition: .5s;
+	-webkit-transition: .35s;
+	-moz-transition: .35s;
+	-ms-transition: .35s;
+	-o-transition: .35s;
+	transition: .35s;
 }
 
 .menu-btn {
@@ -83,7 +84,7 @@ LIGHTSLATEGRAY
 .nav li:hover,
 .nav li:focus,
 .nav li:active {
-		background-color: rgba(119,136,153,.85);
+		background-color: rgba(119,136,153,1);
 }
 
 .nav li:hover a,
@@ -92,3 +93,30 @@ LIGHTSLATEGRAY
 	color: #F5F5F5;
 	font-weight: 400;
 }
+
+.sticky {  
+    position: fixed;  
+    width: 100%;  
+    left: 0;  
+    top: 0;  
+    z-index: 100;  
+    border-top: 0; 
+} 
+/*
+.js-navicon-launch{
+	animation: navicon-launch 1s ease-out forwards;
+	-webkit-animation: navicon-launch 1s ease-out forwards;
+}
+
+@-webkit-keyframes navicon-launch {
+	0% {
+		opacity: 0;
+		transform: translateY(200px);
+	}
+	
+	100% {
+		opacity: 0;
+		transform: translateY(0px);
+	}
+	
+}*/
